Adding multipeer visual feedback on TV

--- a/Nano4TV/View/Base.lproj/Main.storyboard
+++ b/Nano4TV/View/Base.lproj/Main.storyboard
@@ -34,6 +34,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wu6-TO-1qx"/>
                     </view>
+                    <connections>
+                        <outlet property="lblStatus" destination="hAi-Rm-rbJ" id="W6o-Dx-yWU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
